Fix header alignments/buttons (add burger menu)

--- a/vcasino/src/app/components/clicker/upgrades/upgrades.component.scss
+++ b/vcasino/src/app/components/clicker/upgrades/upgrades.component.scss
@@ -146,14 +146,14 @@
   width: 100%;
   height: 100%;
   background: #272a2fb3;
-  z-index: 9998;
+  z-index: 8;
   display: flex;
   justify-content: center;
 }
 
 .upgrade-modal {
   position: fixed;
-  z-index: 9999;
+  z-index: 9;
   bottom: 0;
   width: 100%;
   max-width: 744px;
