--- a/vcasino/src/app/pages/auth/register-page/register-page.component.scss
+++ b/vcasino/src/app/pages/auth/register-page/register-page.component.scss
@@ -9,14 +9,14 @@
   width: 100%;
   height: 100%;
   background: #272a2fb3;
-  z-index: 9998;
+  z-index: 98;
   display: flex;
   justify-content: center;
 }
 
 .email-modal {
   position: fixed;
-  z-index: 9999;
+  z-index: 99;
   top: 20%;
   margin: 0 10px;
 
