--- a/vcasino/src/styles.scss
+++ b/vcasino/src/styles.scss
@@ -75,3 +75,8 @@ body {
   pointer-events: none;
   background-color: var(--yellow-shadow);
 }
+
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
